<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="userdata"
            type="com.project.gitUser.model.UserData" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/container">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white">

            <ImageView
                android:id="@+id/user_profile_picture"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:contentDescription="@string/user_profile_picture_description"
                app:imageUrl="@{userdata.profileUrl}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/github" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"
                tools:ignore="MissingConstraints" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@+id/user_profile_picture"
                tools:ignore="ExtraText">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/repo_created_date_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/user_repo_created_at"
                        android:text="@string/user_repo_created_at"
                        android:textColor="@color/colorPrimaryDark"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/repo_created_date_value"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:contentDescription="@string/user_repo_created_at"
                        android:text="@{userdata.createdAt}"
                        android:textColor="@color/colorAccent"
                        tools:text="@string/default_created_date" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@android:color/darker_gray"
                    tools:ignore="MissingConstraints" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/repo_updated_title"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:contentDescription="@string/user_repo_update_at"
                            android:text="@string/user_repo_update_at"
                            android:textColor="@color/colorPrimaryDark"
                            android:textStyle="bold"
                            tools:text="@string/default_created_date" />

                        <TextView
                            android:id="@+id/repo_last_update_value"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="4dp"
                            android:contentDescription="@string/user_repo_update_at"
                            android:text="@{userdata.updated}"
                            android:textColor="@color/colorAccent"
                            tools:text="25.126 au" />

                    </LinearLayout>

                    <ImageView
                        android:id="@+id/open_web"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/open_web_url"
                        android:padding="16dp"
                        app:srcCompat="@drawable/github_icon" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@android:color/darker_gray"
                    tools:ignore="MissingConstraints" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:contentDescription="@string/user_repo_language"
                    android:text="@string/user_repo_language"
                    android:textColor="@color/colorPrimaryDark"
                    android:textStyle="bold"
                    tools:text="JAVA" />

                <TextView
                    android:id="@+id/langauge_text_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@{userdata.language}"
                    android:textColor="@color/colorAccent"
                    tools:text="JAVA" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@android:color/darker_gray"
                    tools:ignore="MissingConstraints" />

                <TextView
                    android:id="@+id/repo_description_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:contentDescription="@string/user_repo_description"
                    android:text="@string/user_repo_description"
                    android:textColor="@color/colorPrimaryDark" />

                <TextView
                    android:id="@+id/repo_description_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:maxLines="10"
                    android:text="@{userdata.description}"
                    android:textColor="@color/colorAccent"
                    tools:text="11.9 km/s" />

                <TextView
                    android:id="@+id/repo_watches_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:contentDescription="@string/user_repo_watches_title"
                    android:text="@string/user_repo_watches_title"
                    android:textColor="@color/colorPrimaryDark"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/repo_watches_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:maxLines="10"
                    android:text="@{String.valueOf(userdata.watcherCount)}"
                    android:textColor="@color/colorAccent"
                    tools:text="11" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@android:color/darker_gray"
                    tools:ignore="MissingConstraints" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/star_count_title"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:contentDescription="@string/user_repo_star_count"
                            android:text="@string/user_repo_star_count"
                            android:textColor="@color/colorPrimaryDark"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/star_value"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="4dp"
                            android:contentDescription="@string/user_repo_star_count"
                            android:text="@{String.valueOf(userdata.component7())}"
                            android:textColor="@color/colorAccent"
                            tools:text="25.126 au" />
                    </LinearLayout>

                    <ImageView
                        android:id="@+id/star_image"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/user_profile_picture_description"
                        android:padding="16dp"
                        app:srcCompat="@drawable/ic_star" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@android:color/darker_gray"
                    tools:ignore="MissingConstraints" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/forks_title"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:contentDescription="@string/user_forks_title"
                            android:text="@string/user_forks_title"
                            android:textColor="@color/colorPrimaryDark"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/forks_title_value"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="4dp"
                            android:contentDescription="@string/user_forks_title"
                            android:text="@{String.valueOf(userdata.forks)}"
                            android:textColor="@color/colorAccent"
                            tools:text="25.126 au" />
                    </LinearLayout>

                    <ImageView
                        android:id="@+id/forks_image"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/repository_name_title"
                        android:padding="16dp"
                        app:srcCompat="@drawable/ic_git_branch" />

                </LinearLayout>

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</layout>